# todo-web

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
db/: database.db  init_tasks.csv  seed.csv
migrations/: 20241224234902_create_tasks_table.down.sql  20241224234902_create_tasks_table.up.sql  20250105235303_add_status_column_to_tasks.down.sql  20250105235303_add_status_column_to_tasks.up.sql  20250109233307_mod_status_column_to_tasks.down.sql  20250109233307_mod_status_column_to_tasks.up.sql  20250114001346_add_days_column_to_tasks.down.sql  20250114001346_add_days_column_to_tasks.up.sql  20250114232647_add_days_column_to_tasks.down.sql  20250114232647_add_days_column_to_tasks.up.sql  20250119234211_drop_posts_table.down.sql  20250119234211_drop_posts_table.up.sql  20250120003249_update_tasks_jst.down.sql  20250120003249_update_tasks_jst.up.sql  20250129003944_create_tasks_table.up.sql  20250711000439_create_tasks_archive.down.sql  20250711000439_create_tasks_archive.up.sql
shell/: bashrc_alias.sh  docker-entrypoint.sh  exec_migration.sh  initbash_profile.sh
src/: db.rs  lib.rs  main.rs
src/sql/: add_task.sql  archive_task.sql  doing_task.sql  done_task.sql  get_max_id.sql  get_task.sql  get_task_list.sql  start_task.sql  undo_task.sql
static/: styles.css
static/css/: styles.css
static/js/: main.js
templates/: hello.html  task_list.html  todo.html
