[package]
name = "todo-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
askama = "0.12.1"
askama_actix = "0.14.0"
chrono = "0.4.39"
dotenv = "0.15.0"
serde = { version = "1.0.216", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
